--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -8,10 +8,12 @@
 @layer base{
   html{
     font-family: "Poppins", sans-serif;
+
   }
   body {
     padding: 0;
     margin: 0;
+    background-color: #242832;
   }
 }
 
